--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=7e808b80f65772e1a0fd36ffcf6baa6b
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@127.0.0.1:8889/symfony
+DATABASE_URL=mysql://java:java1122@localhost:3306/symfony
 ###< doctrine/doctrine-bundle ###
 ###> symfony/messenger ###
 # Choose one of the transports below
